Co-authored-by: Jacob Le <spookypoopy@users.noreply.github.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
     "configurations": [
         
         {
-            "type": "jdk",
+            "type": "java",
             "request": "launch",
             "name": "Launch Java App"
 
